# remote-top

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  format.sh  main.cpp  run.sh
.cache/clangd/index/: cpu.cpp.134AFE22229CB708.idx  cpu.h.E06F886EA876A68B.idx  main.cpp.E42797E678F695C2.idx  mem.cpp.585C26C510F671C3.idx  mem.h.64A05667C72E6597.idx  monitor.cpp.4616F4CBFDA431B0.idx  monitor.h.747280C1D292E0FE.idx  monitor_run.cpp.3159C2E2828C7F0B.idx  monitor_run.h.2D3DCD672823A30D.idx  net.cpp.54D224CB237BF71A.idx  net.h.62E0EF24E16D970B.idx  proc.cpp.A826DB41E134039A.idx  proc.h.F61C7424E30BAA7D.idx
client/: app.go  go.mod  go.sum  main.go  proto.sh  wails.json
client/frontend/: index.html  package-lock.json  package.json  package.json.md5
client/frontend/src/: App.vue  main.js  style.css
client/frontend/src/components/: ConnectPane.vue  CpuPane.vue  MainPane.vue  MemPane.vue  MonitorPane.vue  NetPane.vue  ProcPane.vue
client/frontend/src/pages/: ConnectPage.vue  MonitorPage.vue
client/frontend/wailsjs/go/main/: Collect.d.ts  Collect.js
client/pb/: Monitor.pb.go  Monitor_grpc.pb.go
client/protos/: Monitor.proto
lib/monitor/: CMakeLists.txt
lib/monitor/include/monitor/: cpu.h  mem.h  monitor.h  net.h  proc.h
lib/monitor/include/tools/: cmdline.h  minilog.h
lib/monitor/src/: cpu.cpp  global.cpp  mem.cpp  monitor.cpp  net.cpp  proc.cpp
log/: minilog.h
monitor/: CMakeLists.txt  cpu.cpp  mem.cpp  monitor_run.cpp  net.cpp  proc.cpp
monitor/include/: cpu.h  global.h  mem.h  monitor.h  monitor_run.h  net.h  proc.h
monitor/src/: cpu.cpp  global.cpp  mem.cpp  monitor.cpp  net.cpp  proc.cpp
protos/: Monitor.proto
server/: CMakeLists.txt  main.cpp
server/include/: cmdline.h  server.h
server/protos/: Monitor.grpc.pb.cc  Monitor.grpc.pb.h  Monitor.pb.cc  Monitor.pb.h
server/src/: server.cpp
test/: main.cpp
